--- a/template/donor_reg_s.html
+++ b/template/donor_reg_s.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="container-fluid">
         <div class="form_body">
-            <h1 class="text-center">Welcome To NCI Blood Bank...</h1>
+            <h1 class="text-center">Welcome To NCI Blood Bank</h1>
             <br>
             <h2 class="text-center">Details about {{forms.name.data}}</h2>
 
